--- a/index.html
+++ b/index.html
@@ -2,35 +2,79 @@
 <html>
 
 <head>
-    <title>Boxes</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <title>Lists, Tables and Forms</title>
+    <link rel="stylesheet" type="text/css" href="table.css">
 </head>
 
 <body>
-    <div id="page">
-        <div id="logo">
-            <img src="grand-piano-clipart-241420-piano-illustration-png-transparent-png-full-size-clipart-4912991-pinclipart.png" class="small" />
-            <div class="title">
-                "MuzikWizard"
-            </div>
-
-        </div>
-        <ul id="naviga3con">
-            <li> <a href="#" class="on">Home</a></li>
-            <li> <a href="#">ForSale</a></li>
-            <li> <a href="#">Repair</a></li>
-            <li> <a href="#">About</a></li>
-            <li> <a href="#">Contact</a></li>
+    <header>
+        <h1>Poetry Workshops</h1>
+        <p>We will be conducting a number of poetry workshops and symposiums throughout the year.</p>
+        <p>Please note that the following events are free to members:</p>
+    </header> <br>
+    <div class="dot">
+        <ul>
+            <li>A Poetic Perspective</li>
+            <li>Walt Whitman at War</li>
+            <li>Found Poems and Outsider Poetry</li> <br> <br>
         </ul>
-        <section id="container">
-            <img src="1pia1.jpg" class="medium" />
-            <img src="2pia2.jpg" class="medium" />
-            <img src="3pia3.jpg" class="medium" />
-        </section>
-        <p>
-            We specialize in the sale and repair of classic kerboards, in par3cular the Fender Rhodes, Wurlitzer EP200, and Hohner Clavinet.
-        </p>
     </div>
+
+    <table>
+        <tr class="head">
+            <th></th>
+            <th>New York</th>
+            <th>Chicago</th>
+            <th>San Francisco</th>
+        </tr>
+        <tr>
+            <th>A Poetic Perspective</th>
+            <td>Sat, 4 Feb 2012<br />11am - 2pm</td>
+            <td>Sat, 3 Mar 2012<br />11am - 2pm</td>
+            <td>Sat, 17 Mar 2012<br />11am - 2pm</td>
+        </tr>
+        <tr class="even">
+            <th>Walt Whitman at War</th>
+            <td>Sat, 7 Apr 2012<br />11am - 1pm</td>
+            <td>Sat, 5 May 2012<br />11am - 1pm</td>
+            <td>Sat, 19 May 2012<br />11am - 1pm</td>
+        </tr>
+        <tr>
+            <th>Found Poems &amp; Outsider Poetry</th>
+            <td>Sat, 9 Jun 2012<br />11am - 2pm</td>
+            <td>Sat, 7 Jul 2012<br />11am - 2pm</td>
+            <td>Sat, 21 Jul 2012<br />11am - 2pm</td>
+        </tr>
+        <tr class="even">
+            <th>Natural Death: An Exploration</th>
+            <td>Sat, 4 Aug 2012<br />11am - 4pm</td>
+            <td>Sat, 8 Sep 2012<br />11am - 4pm</td>
+            <td>Sat, 15 Sep 2012<br />11am - 4pm</td>
+        </tr>
+    </table>
+    <form action="http://www.example.com/form.php" method="get">
+        <fieldset>
+            <legend>Register your interest</legend>
+            <p><label class="title" for="name">Your name:</label>
+                <input type="text" name="name" id="name"><br />
+                <label class="title" for="email">Your email:</label>
+                <input type="text" name="email" id="email"></p>
+            <p><label for="location" class="title">Your closest center:</label>
+                <select name="location" id="location">
+						 <option value="ny">New York</option>
+						 <option value="il">Chicago</option>
+						 <option value="ca">San Francisco</option>
+					 </select></p>
+            <span class="title">Are you a member?</span>
+            <label><input type="radio" name="member" value="yes" /> Yes</label>
+            <label><input type="radio" name="member" value="no" /> No</label></p>
+        </fieldset>
+        <div class="submit"><input type="submit" value="Register" /></div>
+    </form>
+    <footer>
+        &copy; 2023 Poetry Workshop
+    </footer>
+
 </body>
 
 </html>
